test/earlyReturnQuantumIf3.slq

def foo(const x:ğ”¹){
	if x{
		return ([1],[]); // error
	}
	return ([],[0]); // TODO: error
}
def main(){
	x:=H(0);
	return (foo(x),x);
}
